deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 3000
    targetPort: 3000
    name: homepage
