deployment/ingress.yml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: homepage

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`everbuild.org`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
